--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "backend-challenge",
+  "name": "back-challenge-graphql",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "dev:simple": "tsnd --respawn --transpile-only server.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
-  },
+  "repository": "https://github.com/luanrramos/back-challenge-graphql.git",
+  "author": "Luan Ricardo <luanrnr1227@gmail.com>",
+  "license": "MIT",
   "dependencies": {
-    "apollo-server": "^3.13.0",
-    "graphql": "^16.8.1"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.13.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
