--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@types/node": "^20.13.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.8.1",
+    "mysql2": "^3.10.0",
     "nodemon": "^3.1.2",
     "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20",
     "typescript": "^5.4.5"
   }
 }
