--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "repository": "https://github.com/luanrramos/back-challenge-graphql.git",
   "author": "Luan Ricardo <luanrnr1227@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node ./dist/index.ts",
+    "dev": "nodemon .src/index.ts",
+    "build": "tsc -p ."
+  },
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
